--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portafolio</title>
+    <title>Gaspar Cardos | Desarrollador Web Full Stack</title>
+    <meta name="description" content="Desarrollador Web Full Stack con enfoque backend en frameworks PHP como Phalcon y Laravel, y bases de datos relacionales como PostgreSQL y MySQL para proyectos escalables." />
+    <link rel="canonical" href="https://gasparcardos.github.io/portfolio/" />
+
+    <meta property="og:title" content="Gaspar Cardos | Desarrollador Web Full Stack" />
+    <meta property="og:description" content="Desarrollador Web Full Stack con enfoque backend en frameworks PHP como Phalcon y Laravel, y bases de datos relacionales como PostgreSQL y MySQL para proyectos escalables." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://gasparcardos.github.io/portfolio/" />
+    <meta property="og:image" content="https://gasparcardos.github.io/portfolio/og.svg" />
+    <meta property="og:site_name" content="Gaspar Cardos | Desarrollador Web Full Stack" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Gaspar Cardos | Desarrollador Web Full Stack" />
+    <meta name="twitter:description" content="Desarrollador Web Full Stack con enfoque backend en frameworks PHP como Phalcon y Laravel, y bases de datos relacionales como PostgreSQL y MySQL para proyectos escalables." />
+    <meta name="twitter:image" content="https://gasparcardos.github.io/portfolio/og.svg" />
   </head>
   <body>
     <div id="app"></div>
